--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Digital Portfolio</title>
-<link href="css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+<link href="simpleGridTemplate.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Nunito" rel="stylesheet">
 </head>
 <body>
