fixed image filenames for case sensitive

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <section class="intro">
     <div class="column">
       <h3>Zack Traczyk</h3>
-      <img src="images/profile.jpg" alt="This is me, Zack Traczyk!" class="profile"> </div>
+      <img src="images/profile.JPG" alt="This is me, Zack Traczyk!" class="profile"> </div>
     <div class="column">
       <p>When posed with the question, "Who is Zack Traczyk?" --the words hardworking and willing to learn come quickly to mind. As an aved coder and persistant learner, I throw myself at daunting problems, always trying to understand how they work and what is the best solution.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla</p>
@@ -36,7 +36,7 @@
   </script>
   <!-- Stats Gallery Section -->
   <div class="gallery">
-    <div class="thumbnail"> <a href="http://blobmob.us/"><img src="images/blobmob.png" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="http://blobmob.us/"><img src="images/blobmob.PNG" alt="" width="2000" class="cards"/></a>
       <h4>Blob Mob</h4>
       <p class="tag">HTML, CSS, JS</p>
       <p class="text_column">Blob Mob is a Javascript web game using HTML5's canvas tag. More infromation.</p>
