--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
   <!-- Stats Gallery Section -->
   <div class="gallery">
     <div class="thumbnail"> <a href="http://blobmob.us/"><img src="images/blobmob.PNG" alt="" width="2000" class="cards"/></a>
-      <h4>Blob Mob</h4>
-      <p class="tag">HTML, CSS, JS, Git</p>
-      <p class="text_column">Blob Mob is a Javascript web game using HTML5's canvas tag.</p>
+      <h4>Blob Mob <i>Dec 2016 - NOW</i></h4>
+      <p class="tag">HTML, CSS, JS + howler, Git</p>
+      <p class="text_column">Blob Mob is a Javascript web game using HTML5's canvas tag. This was my first big coding project and was design from scratch (except Howler.js for sound).</p>
       <p class="text_footer"><a href="https://github.com/xxzbuckxx/Blob-Mob">More information</a></p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>Blob Mob - Story Mode</h4>
+    <div class="thumbnail"> <a href="https://github.com/xxzbuckxx/Blob-Mob-Story-Mode/wiki"><img src="images/blobmobsm.PNG" alt="" width="2000" class="cards"/></a>
+      <h4>Blob Mob - Story Mode<i>January 2018 - NOW</i></h4>
       <p class="tag">HTML, CSS, JS + Jquery, Git</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p class="text_column">Unfinished sequel to Blob Mob with a bigger focus on art and story. You can find a log and current status in the wiki and project pages of the github page.</p>
       <p class="text_footer"><a href="https://github.com/xxzbuckxx/Blob-Mob-Story-Mode">More information</a></p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>TITLE</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <p class="text_footer"><a href="">More information</a></p>
+    <div class="thumbnail"> <a href="http://philome.la/TraczykZack/the-bone-factory"><img src="images/bonefactory.PNG" alt="" width="2000" class="cards"/></a>
+      <h4>Bone Factory<i>July 2014</i></h4>
+      <p class="tag"><a href="http://twinery.org/">Twine</a></p>
+      <p class="text_column">Bone Factory is a text based game made with Twine. Since this game was made when I was so long ago (6th grade) there are lots of spelling errors; however, it's still a good example of how I'm willing to learn and figure out how to do things.</p>
+      <p class="text_footer"><a href="http://philome.la/TraczykZack/the-bone-factory">Play the game</a></p>
     </div>
     <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
       <h4>TITLE</h4>
