Excel Page href

--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
     <div class="thumbnail"> <a href="http://philome.la/TraczykZack/the-bone-factory"><img src="images/bonefactory.PNG" alt="" width="2000" class="cards"/></a>
       <h4>Bone Factory<i>July 2014</i></h4>
       <p class="tag"><a href="http://twinery.org/">Twine</a></p>
-      <p class="text_column">Bone Factory is a text based game made with Twine. Since this game was made when I was so long ago (6th grade) there are lots of spelling errors; however, it's still a good example of how I'm willing to learn and figure out how to do things.</p>
+      <p class="text_column">Bone Factory is a text based game made with Twine. This was one of the first games I ever made.</p>
       <p class="text_footer"><a href="http://philome.la/TraczykZack/the-bone-factory">Play the game</a></p>
     </div>
     <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>TITLE</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <p class="text_footer"><a href="">More information</a></p>
+      <h4>Excel Projects</h4>
+      <p class="tag">Microsoft Excel 2016</p>
+      <p class="text_column">Here are a couple of examples showing my profficency in Microsoft Word.</p>
+      <p class="text_footer"><a href="Excel/Excel.html">More information</a></p>
     </div>
   </div>
   <div class="gallery">
     <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>TITLE</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <h4>Excel Projects</h4>
+      <p class="tag">Microsoft Excel</p>
+      <p class="text_column">As a certified Microsoft Office Excel Specialist I have numerous examples of my profficency with Excel.</p>
       <p class="text_footer"><a href="">More information</a></p>
     </div>
     <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
@@ -90,7 +90,7 @@
   <!-- Footer Section -->
   <footer id="contact">
     <p class="hero_header">GET IN TOUCH WITH ME</p>
-    <div class="button">EMAIL ME </div>
+    <div class="button">zstraczyk324@gmail.com</div>
   </footer>
   <!-- Copyrights Section -->
   <div class="copyright">Developed by <strong>Zack Traczyk</strong></div>
