--- a/Excel/Excel.html
+++ b/Excel/Excel.html
@@ -5,22 +5,31 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Portfolio</title>
 <link href="BlogPostAssets/styles/blogPostStyle.css" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Kavivanar" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Kavivanar" rel="stylesheet">
 </head>
 <body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+	$('#navbar').click(function(){
+		$(body).hide();
+	});
+	
+</script>
 	<div id="navbar">
 		<ul>
 			<!--<li>Logo</li>-->
-			<li><b>&lt;--</b> Home</li>
+			<li><a href="../index.html"><b>&lt;--</b> Home</a></li>
 		</ul>
 	</div>
-	<div id="header">
-		<h1>Excel Projects</h1>
-		<h3>A few examples of how I have used Excel in the past.</h3>
-	</div>
-	<div id="wrapper">
-		<p>ehihf ehiohe h eiohioeh ieh ioeh ieh ieh h ohe oheohioeafh hf ioafh ioeh fiehf oiaf oefoo</p>
-		<p>fhefheoi fh eifh eofh ieo fe hfoei hfieh of eo feh ofe o fei foe ioef eio fho efi</p>
+	<div id="content">
+		<div id="header">
+			<h1>Excel Projects.</h1>
+			<h3>A few examples of how I have used Excel in the past.</h3>
+		</div>
+		<div id="wrapper">
+			<p>As Microsoft Specilist in Excel 2016 I have worked on a variety of Excel spreadsheets. Here are some examples of this progression.</p>
+			<p>fhefheoi fh eifh eofh ieo fe hfoei hfieh of eo feh ofe o fei foe ioef eio fho efi</p>
+		</div>
 	</div>
 	
 </body>
