--- a/Excel/Excel.html
+++ b/Excel/Excel.html
@@ -24,11 +24,13 @@
 	<div id="content">
 		<div id="header">
 			<h1>Excel Projects.</h1>
-			<h3>A few examples of how I have used Excel in the past.</h3>
+			<h3><a href="https://www.youracclaim.com/badges/3b8220e3-ec7f-4c58-97ea-fba33d45172c/public_url">Find Certification Here.</a></h3>
 		</div>
 		<div id="wrapper">
 			<p>As Microsoft Specilist in Excel 2016 I have worked on a variety of Excel spreadsheets. Here are some examples of this progression.</p>
-			<p>fhefheoi fh eifh eofh ieo fe hfoei hfieh of eo feh ofe o fei foe ioef eio fho efi</p>
+			<p>The first example is using the vlookup function to classify the strength of a hurricane using the magnitude.</p>
+			<img src="BlogPostAssets/images/vlookup.PNG"/>
+
 		</div>
 	</div>
 	
