Excel image added

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <p class="text_column">Bone Factory is a text based game made with Twine. This was one of the first games I ever made.</p>
       <p class="text_footer"><a href="http://philome.la/TraczykZack/the-bone-factory">Play the game</a></p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="Excel/Excel.html"><img src="images/Excel.PNG" alt="Excel Project" width="2000" class="cards"/></a>
       <h4>Excel Projects</h4>
       <p class="tag">Microsoft Excel 2016</p>
       <p class="text_column">Here are a couple of examples showing my profficency in Microsoft Word.</p>
@@ -62,7 +62,7 @@
     </div>
   </div>
   <div class="gallery">
-    <div class="thumbnail"> <a href="#"><img src="images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="#" alt="" width="2000" class="cards"/></a>
       <h4>Excel Projects</h4>
       <p class="tag">Microsoft Excel</p>
       <p class="text_column">As a certified Microsoft Office Excel Specialist I have numerous examples of my profficency with Excel.</p>
