--- a/Excel/Excel.html
+++ b/Excel/Excel.html
@@ -27,12 +27,18 @@
 			<h3><a href="https://www.youracclaim.com/badges/3b8220e3-ec7f-4c58-97ea-fba33d45172c/public_url">Find Certification Here.</a></h3>
 		</div>
 		<div id="wrapper">
-			<p>As Microsoft Specilist in Excel 2016 I have worked on a variety of Excel spreadsheets. Here are some examples of this progression.</p>
-			<p>The first example is using the vlookup function to classify the strength of a hurricane using the magnitude.</p>
-			<img src="BlogPostAssets/images/vlookup.PNG"/>
-
+			<p>The examples below use a magnitude of different Microsoft Excel functions including VLOOKUP, ---, -- , and ---. I created these documents during my Computer Applications class sophmore year 2018 as training for my Microsoft Office Excel certification. It took no more than 10 minutes for each file, and with each project I imensely deepend my understanding of Excel as a whole.</p>
+            <div id="examples">
+                <div id="thumbnail"><a download="#"><img src="BlogPostAssets/images/Microsoft-Excel-2013-icon.png"/>
+                    <p>Filename.excel</p>
+                </a></div>
+                <div id="thumbnail"><a download="#"><img src="BlogPostAssets/images/Microsoft-Excel-2013-icon.png"/>
+                    <p>Filename.excel</p>
+                </a></div>
+                <div id="thumbnail"><a download="#"><img src="BlogPostAssets/images/Microsoft-Excel-2013-icon.png"/>
+                    <p>Filename.excel</p>
+                </a></div>
+            </div>
 		</div>
 	</div>
-	
 </body>
-</html>
