all project names added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="menu">
       <ul>
         <li><a href="Most%20Creative/Creative.html">Most Creative</a></li>
-        <li><a href="Best%20Cources/Best.html">Best Cources</a</li>
+		  <li><a href="Best%20Cources/Best.html">Best Cources</a></li>
         <li><a href="https://github.com/xxzbuckxx">Github</a></li>
         <li><a href="#">About</a></li>
       </ul>
@@ -69,7 +69,7 @@
       <p class="text_column">Bone Factory is a text based game made with Twine. This was one of the first games I ever made.</p>
       <p class="text_footer"><a href="http://philome.la/TraczykZack/the-bone-factory">Play the game</a></p>
     </div>
-    <div class="thumbnail"> <a href="Excel/Excel.html"><img src="assets/images/Excel.PNG" alt="Excel Project" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="Excel/Excel.html"><img src="assets/images/excel.PNG" alt="Excel Project" width="2000" class="cards"/></a>
       <h4>Excel Projects</h4>
       <p class="tag">Microsoft Excel 2016</p>
       <p class="text_column">Here are a couple of examples showing my profficency in Microsoft Word.</p>
@@ -78,27 +78,27 @@
   </div>
   <div class="gallery">
     <div class="thumbnail"> <a href="#"><img src="#" alt="" width="2000" class="cards"/></a>
-      <h4>Excel Projects</h4>
-      <p class="tag">Microsoft Excel</p>
-      <p class="text_column">As a certified Microsoft Office Excel Specialist I have numerous examples of my profficency with Excel.</p>
+      <h4>Word Projects</h4>
+      <p class="tag">Microsoft Word 2016</p>
+      <p class="text_column">I'm also a certified Microsoft Office Word 2016 Specialist. Here are some of my projects.</p>
       <p class="text_footer"><a href="">More information</a></p>
     </div>
     <div class="thumbnail"> <a href="#"><img src="assets/images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>TITLE</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <h4>Java Projects</h4>
+      <p class="tag">Java</p>
+      <p class="text_column">As a sophmore I took AP Computer Sciences A and learned Java. Here are some examples.</p>
+      <p class="text_footer"><a href="">More information</a></p>
+    </div>
+    <div class="thumbnail"> <a href="https://xxzbuckxx.github.io/css-grids/"><img src="assets/images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+      <h4>CSS Grids</h4>
+      <p class="tag">HTML, CSS</p>
+      <p class="text_column">Here is an example of how</p>
       <p class="text_footer"><a href="">More information</a></p>
     </div>
     <div class="thumbnail"> <a href="#"><img src="assets/images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>TITLE</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <p class="text_footer"><a href="">More information</a></p>
-    </div>
-    <div class="thumbnail"> <a href="#"><img src="assets/images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>TITLE</h4>
-      <p class="tag">HTML, CSS, JS, WordPress</p>
-      <p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <h4>Nodejs projects</h4>
+      <p class="tag">HTML, CSS + Bootstrap, JS + Node + Socket.io</p>
+      <p class="text_column">Here are websites I made using Node.js and Real-time communication.</p>
       <p class="text_footer"><a href="">More information</a></p>
     </div>
   </div>
