--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
   </div>
   <div class="gallery">
-    <div class="thumbnail"> <a href="#"><img src="#" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="#"><img src="assets/images/word.PNG" alt="" width="2000" class="cards"/></a>
       <h4>Word Projects</h4>
       <p class="tag">Microsoft Word 2016</p>
       <p class="text_column">I'm also a certified Microsoft Office Word 2016 Specialist. Here are some of my projects.</p>
