--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <p class="text_footer"><a href="https://github.com/xxzbuckxx/Blob-Mob">More information</a></p>
     </div>
     <div class="thumbnail"> <a href="https://github.com/xxzbuckxx/Blob-Mob-Story-Mode/wiki"><img src="assets/images/blobmobsm.PNG" alt="" width="2000" class="cards"/></a>
-      <h4>Blob Mob - Story Mode<i>January 2018 - NOW</i></h4>
+      <h4>Blob Mob - Story Mode<i>Jan 2018 - NOW</i></h4>
       <p class="tag">HTML, CSS, JS + Jquery, Git</p>
       <p class="text_column">Unfinished sequel to Blob Mob with a bigger focus on art and story. You can find a log and current status in the wiki and project pages of the github page.</p>
       <p class="text_footer"><a href="https://github.com/xxzbuckxx/Blob-Mob-Story-Mode">More information</a></p>
@@ -70,7 +70,7 @@
       <p class="text_footer"><a href="http://philome.la/TraczykZack/the-bone-factory">Play the game</a></p>
     </div>
     <div class="thumbnail"> <a href="Excel/Excel.html"><img src="assets/images/excel.PNG" alt="Excel Project" width="2000" class="cards"/></a>
-      <h4>Excel Projects</h4>
+      <h4>Excel Projects<i>May 2018</i></h4>
       <p class="tag">Microsoft Excel 2016</p>
       <p class="text_column">Here are a couple of examples showing my profficency in Microsoft Word.</p>
       <p class="text_footer"><a href="Excel/Excel.html">More information</a></p>
@@ -78,21 +78,21 @@
   </div>
   <div class="gallery">
     <div class="thumbnail"> <a href="#"><img src="assets/images/word.PNG" alt="" width="2000" class="cards"/></a>
-      <h4>Word Projects</h4>
+      <h4>Word Projects<i>Apr 2018</i></h4>
       <p class="tag">Microsoft Word 2016</p>
       <p class="text_column">I'm also a certified Microsoft Office Word 2016 Specialist. Here are some of my projects.</p>
       <p class="text_footer"><a href="">More information</a></p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="assets/images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>Java Projects</h4>
+    <div class="thumbnail"> <a href="#"><img src="assets/images/java.PNG" alt="" width="2000" class="cards"/></a>
+      <h4>Java Projects<i>Aug 2017 - May 2018</i></h4>
       <p class="tag">Java</p>
       <p class="text_column">As a sophmore I took AP Computer Sciences A and learned Java. Here are some examples.</p>
       <p class="text_footer"><a href="">More information</a></p>
     </div>
     <div class="thumbnail"> <a href="https://xxzbuckxx.github.io/css-grids/"><img src="assets/images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>CSS Grids</h4>
+      <h4>CSS Grids<i>Feb 2018</i></h4>
       <p class="tag">HTML, CSS</p>
-      <p class="text_column">Here is an example of how</p>
+      <p class="text_column">Here is a test website organized using CSS Grids.</p>
       <p class="text_footer"><a href="">More information</a></p>
     </div>
     <div class="thumbnail"> <a href="#"><img src="assets/images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
