--- a/Projects/Java/Java.html
+++ b/Projects/Java/Java.html
@@ -18,7 +18,7 @@
 	<div id="navbar">
 		<ul>
 			<!--<li>Logo</li>-->
-			<li><a href="../index.html"><b>&lt;--</b> Home</a></li>
+			<li><a href="../../index.html"><b>&lt;--</b> Home</a></li>
 		</ul>
 	</div>
 	<div id="content">
