--- a/index.html
+++ b/index.html
@@ -69,27 +69,27 @@
       <p class="text_column">Bone Factory is a text based game made with Twine. This was one of the first games I ever made.</p>
       <p class="text_footer"><a href="http://philome.la/TraczykZack/the-bone-factory">Play the game</a></p>
     </div>
-    <div class="thumbnail"> <a href="Excel/Excel.html"><img src="assets/images/excel.PNG" alt="Excel Project" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="Projects/Excel/Excel.html"><img src="assets/images/excel.PNG" alt="Excel Project" width="2000" class="cards"/></a>
       <h4>Excel Projects<i>May 2018</i></h4>
       <p class="tag">Microsoft Excel 2016</p>
       <p class="text_column">Here are a couple of examples showing my profficency in Microsoft Word.</p>
-      <p class="text_footer"><a href="Excel/Excel.html">More information</a></p>
+      <p class="text_footer"><a href="Projects/Excel/Excel.html">More information</a></p>
     </div>
   </div>
   <div class="gallery">
-    <div class="thumbnail"> <a href="#"><img src="assets/images/word.PNG" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="Projects/Word/Word.html"><img src="assets/images/word.PNG" alt="" width="2000" class="cards"/></a>
       <h4>Word Projects<i>Apr 2018</i></h4>
       <p class="tag">Microsoft Word 2016</p>
       <p class="text_column">I'm also a certified Microsoft Office Word 2016 Specialist. Here are some of my projects.</p>
-      <p class="text_footer"><a href="">More information</a></p>
+      <p class="text_footer"><a href="Projects/Word/Word.html">More information</a></p>
     </div>
-    <div class="thumbnail"> <a href="#"><img src="assets/images/java.PNG" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="Projects/Java/Java.html"><img src="assets/images/java.PNG" alt="" width="2000" class="cards"/></a>
       <h4>Java Projects<i>Aug 2017 - May 2018</i></h4>
       <p class="tag">Java</p>
       <p class="text_column">As a sophmore I took AP Computer Sciences A and learned Java. Here are some examples.</p>
-      <p class="text_footer"><a href="">More information</a></p>
+      <p class="text_footer"><a href="Projects/Java/Java.html">More information</a></p>
     </div>
-    <div class="thumbnail"> <a href="https://xxzbuckxx.github.io/css-grids/"><img src="assets/images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
+    <div class="thumbnail"> <a href="https://xxzbuckxx.github.io/css-grids/"><img src="assets/images/css-grid.PNG" alt="" width="2000" class="cards"/></a>
       <h4>CSS Grids<i>Feb 2018</i></h4>
       <p class="tag">HTML, CSS</p>
       <p class="text_column">Here is a test website organized using CSS Grids.</p>
