--- a/Projects/Excel/Excel.html
+++ b/Projects/Excel/Excel.html
@@ -29,8 +29,8 @@
 		<div id="wrapper">
 			<p>The examples below use a magnitude of different Microsoft Excel functions including VLOOKUP, ---, -- , and ---. I created these documents during my Computer Applications class sophmore year 2018 as training for my Microsoft Office Excel certification. It took no more than 10 minutes for each file, and with each project I imensely deepend my understanding of Excel as a whole.</p>
             <div id="examples">
-                <div id="thumbnail"><a download="#"><img src="assets/images/Microsoft-Excel-2013-icon.png"/>
-                    <p>Filename.excel</p>
+                <div id="thumbnail"><a href="assets/examples/ZACHARY%20TRACZYK%20-%20VLOOKUP.xlsx"><img src="assets/images/Microsoft-Excel-2013-icon.png"/>
+                    <p>VLOOKUP.xlsx</p>
                 </a></div>
                 <div id="thumbnail"><a download="#"><img src="assets/images/Microsoft-Excel-2013-icon.png"/>
                     <p>Filename.excel</p>
