--- a/Best Cources/Best.html
+++ b/Best Cources/Best.html
@@ -27,8 +27,14 @@
 			<h3>Most Helpful or interesting cources at OPRFHS</h3>
 		</div>
 		<div id="wrapper">
-			<p>Best Cources</p>
-            <p>probably CS or Computer Apps</p>
+			<p>At Oak Park and River Forest High School I learned a lot of helpful tools that will help me greatly in the future. Here are some of my favorite classes that helped greatly in aquiring these tools.</p>
+           
+            <h3>AP Computer Sciences A</h3>
+            <p>Computer Sciences was one of my favorite classes in high school. I took it during sophtmore year 2017-2018 and I learned a lot about coding in Java. At this time I already had been programming in javascript for a few years which made it confusing learing some of the slighty different subtlties of Java; however, I feel like this made me a better coder and learner by the end of the year.</p>
+            
+            <h3>Computer Applications</h3>
+            <p>Although I only took this class to get my keyboarding credit, I was delightfully suprsided by the magnitude of things I actually learned in this class. From Word and Excel certifications to resumes and the online portfolio you are reading right now I learned a variety of important real life skills in this class.</p>
 		</div>
 	</div>
 </body>
+</html>
