--- a/Projects/Word/Word.html
+++ b/Projects/Word/Word.html
@@ -27,17 +27,22 @@
 			<h3><a href="https://www.youracclaim.com/badges/f18fc979-3b4e-4e9d-93b0-50c49c8fbcd9/public_url">Find Certification Here.</a></h3>
 		</div>
 		<div id="wrapper">
-			<p>The examples below use a magnitude of different Microsoft Word </p>
+            <img id="start" src="assets/images/104738821-work_from_home.1910x1000.jpg"/>
+			<p>During my Computer Applications class sophtmore year I got my Microsoft Excel and Word certifications. Here are a couple examples of How I used Microsoft Word to create well thoughtout documents.
+            </p>
             <div id="examples">
-                <a href="assets/examples/SC_WD16_1a_ZACHARYTRACZYK_2.docx" download><div id="thumbnail"><img src="assets/images/Microsoft-Word-2013-icon.png"/>
+                <a href="assets/examples/SC_WD16_1a_ZACHARYTRACZYK_2.docx" download><div class="thumbnail"><img src="assets/images/Microsoft-Word-2013-icon.png"/>
                     <p>SC_WD16_1a_ZACHARYTRACZYK_2.docx</p>
                 </div></a>
-                <a href="assets/examples/SC_WD16_3a_ZACHARYTRACZYK_2.docx" download><div id="thumbnail"><img src="assets/images/Microsoft-Word-2013-icon.png"/>
+                <p>The first document is a pamphlet for an Audition.</p>
+                <a href="assets/examples/SC_WD16_3a_ZACHARYTRACZYK_2.docx" download><div class="thumbnail"><img src="assets/images/Microsoft-Word-2013-icon.png"/>
                     <p>SC_WD16_3a_ZACHARYTRACZYK_2.docx</p>
                 </div></a>
-                <a href="assets/examples/SC_WD16_4a_ZACHARYTRACZYK_2.docx" download><div id="thumbnail"><img src="assets/images/Microsoft-Word-2013-icon.png"/>
+                <p>The second document is an employe's report.</p>
+                <a href="assets/examples/SC_WD16_4a_ZACHARYTRACZYK_2.docx" download><div class="thumbnail"><img src="assets/images/Microsoft-Word-2013-icon.png"/>
                     <p>SC_WD16_4a_ZACHARYTRACZYK_2.docx</p>
                 </div></a>
+                <p>The Final document is an advertisement for a local grocery store.</p>
             </div>
 		</div>
 	</div>
