--- a/Projects/Excel/Excel.html
+++ b/Projects/Excel/Excel.html
@@ -27,17 +27,29 @@
 			<h3><a href="https://www.youracclaim.com/badges/3b8220e3-ec7f-4c58-97ea-fba33d45172c/public_url">Find Certification Here.</a></h3>
 		</div>
 		<div id="wrapper">
-			<p>The examples below use a magnitude of different Microsoft Excel functions including VLOOKUP, ---, -- , and ---. I created these documents during my Computer Applications class sophmore year 2018 as training for my Microsoft Office Excel certification. It took no more than 10 minutes for each file, and with each project I imensely deepend my understanding of Excel as a whole.</p>
+            <img id="start" src="assets/images/2-in-1-woman-in-cafe.jpg">
+			<p>The examples below use a magnitude of different Microsoft Excel functions including VLOOKUP, IF, and SUM. I created these documents during my Computer Applications class sophmore year 2018 as training for my Microsoft Office Excel certification. It took no more than 10 minutes for each file, and with each project I imensely deepend my understanding of Excel as a whole.</p>
             <div id="examples">
-                <div id="thumbnail"><a href="assets/examples/ZACHARY%20TRACZYK%20-%20VLOOKUP.xlsx"><img src="assets/images/Microsoft-Excel-2013-icon.png"/>
+                <div class="thumbnail"><a href="assets/examples/ZACHARY%20TRACZYK%20-%20VLOOKUP.xlsx" download><img src="assets/images/Microsoft-Excel-2013-icon.png"/>
                     <p>VLOOKUP.xlsx</p>
                 </a></div>
-                <div id="thumbnail"><a download="#"><img src="assets/images/Microsoft-Excel-2013-icon.png"/>
-                    <p>Filename.excel</p>
+                <p>For VLOOKUP I utilized the VLOOKUP excel function to manipulate spreadsheets in various ways.</p>
+                <div class="thumbnail"><a href="assets/examples/ZACHARY%20TRACZYK%20-%20NBA%20Salaries%20Excel%202018.xlsx" download><img src="assets/images/Microsoft-Excel-2013-icon.png"/>
+                    <p>NBA Salaries Excel.xlsx</p>
                 </a></div>
-                <div id="thumbnail"><a download="#"><img src="assets/images/Microsoft-Excel-2013-icon.png"/>
-                    <p>Filename.excel</p>
+                <p>For NBA Salaries Excel project I was given all of the salaries for famous NBA players and had to use a variety of functions like VLOOKUP and SUM to detemine tax, annual income, and average.</p>
+                <div class="thumbnail"><a href="assets/examples/ZACHARY%20TRACZYK%20-%20IF%20exercise.xlsx" download><img src="assets/images/Microsoft-Excel-2013-icon.png"/>
+                    <p>IF exercise.xlsx</p>
                 </a></div>
+                <p>In IF exercise I used the excel IF function.</p>
+                <div class="thumbnail"><a href="assets/examples/ZACHARY%20TRACZYK%20-%20Golf%20Scorecard.xlsx" download><img src="assets/images/Microsoft-Excel-2013-icon.png"/>
+                    <p>Golf Scorecard.xlsx</p>
+                </a></div>
+                <p>In golf scorecard I played a few games of virtual golf and then calculated the averages and best scores.</p>
+                <div class="thumbnail"><a href="assets/examples/ZACHARY%20TRACZYK%20-%20Balance%20Sheet%20Start.xlsx" download><img src="assets/images/Microsoft-Excel-2013-icon.png"/>
+                    <p>Balance Sheet Start.xlsx</p>
+                </a></div>
+                <p>Finally In Balance sheet I made a fake balance sheet to practice using various functions to show statistics and important facts.</p>
             </div>
 		</div>
 	</div>
