--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Digital Portfolio</title>
+<link rel="shortcut icon" href="assets/images/favicon.ico">
 <link href="assets/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Nunito" rel="stylesheet">
 </head>
