--- a/Most Creative/Creative.html
+++ b/Most Creative/Creative.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Portfolio</title>
+<link rel="shortcut icon" href="assets/images/favicon.ico">
 <link href="assets/styles/blogPostStyle.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Kavivanar" rel="stylesheet">
 </head>
