--- a/Best Cources/Best.html
+++ b/Best Cources/Best.html
@@ -28,6 +28,7 @@
 			<h3>Most Helpful or interesting cources at OPRFHS</h3>
 		</div>
 		<div id="wrapper">
+            <img id="start" src="assets/images/Computer_lab_1.jpg">
 			<p>At Oak Park and River Forest High School I learned a lot of helpful tools that will help me greatly in the future. Here are some of my favorite classes that helped greatly in aquiring these tools.</p>
            
             <h3>AP Computer Sciences A</h3>
