--- a/Most Creative/Creative.html
+++ b/Most Creative/Creative.html
@@ -28,13 +28,8 @@
 			<h3>Most Creative Project</h3>
 		</div>
 		<div id="wrapper">
-			<p>Most Creative project</p>
-            <p>probably blob mob</p>
-            <div id="examples">
-                <div id="thumbnail"><a download="#"><img src="BlogPostAssets/images/Microsoft-Excel-2013-icon.png"/>
-                    <p>Filename.excel</p>
-                </a></div>
-            </div>
+            <img id="start" src="assets/images/Capture.PNG">
+			<p>My most creative project was Blob Mob because of its use of music, digital art, and game design.</p>
 		</div>
 	</div>
 </body>
