--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <h3>Zack Traczyk</h3>
       <img src="assets/images/profile.JPG" alt="This is me, Zack Traczyk!" class="profile"> </div>
     <div class="column">
-      <p>When posed with the question, "Who is Zack Traczyk?" --the words hardworking and willing to learn come quickly to mind. As an aved coder and persistant learner, I throw myself at daunting problems, always trying to understand how they work and what is the best solution.</p>
-      <p>Here you can find a few of the projects I have done over the years. Some are done, some are inprogress, and some are to be left uncompleted.</p>
+      <p> portfolio stuff here</p>
+      <p>Here you can find a few of the projects I have done over the years. Some are complete while others are still works in progress.</p>
     </div>
   </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
