--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!doctype html>
+<!--
+    To do
+    -----------
+    *Revamp site, especially project examples
+    *checklist: https://learntocodewith.me/posts/portfolio-tips/
+-->
 <html>
 <head>
 <meta charset="utf-8">
