--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h3>Zack Traczyk</h3>
       <img src="assets/images/profile.JPG" alt="This is me, Zack Traczyk!" class="profile"> </div>
     <div class="column">
-      <p> portfolio stuff here</p>
+      <p>When posed with the question, "Who is Zack Traczyk?" --the words hardworking and willing to learn come quickly to mind. As an aved coder and persistant learner, I throw myself at daunting problems, always trying to understand how they work and what is the best solution.</p>
       <p>Here you can find a few of the projects I have done over the years. Some are complete while others are still works in progress.</p>
     </div>
   </section>
