--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Digital Portfolio</title>
+<title>Traczyk</title>
 <link rel="shortcut icon" href="assets/images/favicon.ico">
 <link href="assets/simpleGridTemplate.css" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Nunito" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Nunito|Coming+Soon" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
 </head>
 <body>
 <!-- Main Container -->
 <div class="container"> 
   <!-- Header -->
   <header class="header">
-    <h4 class="logo">My Digital Portfolio.</h4>
+    <h4 class="logo">This is My Portfolio.</h4>
   </header>
   <div class="menu">
       <ul>
@@ -32,13 +33,9 @@
   </div>
   <!-- Hero Section -->
   <section class="intro">
-    <div class="column">
       <h3>Zack Traczyk</h3>
-      <img src="assets/images/profile.JPG" alt="This is me, Zack Traczyk!" class="profile"> </div>
-    <div class="column">
       <p>When posed with the question, "Who is Zack Traczyk?" --the words hardworking and willing to learn come quickly to mind. As an aved coder and persistant learner, I throw myself at daunting problems, always trying to understand how they work and what is the best solution.</p>
       <p>Here you can find a few of the projects I have done over the years. Some are complete while others are still works in progress.</p>
-    </div>
   </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
