mid css conversion

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
 <!-- Main Container -->
 <div id="site"> 
-    <h1 id="title">This is My Portfolio.</h1>
+    <h1 id="title">I'm Zack Traczyk.</h1>
     <div class="menu">
         <ul id="menu_container">
             <li class="menu_item"><a href="Most%20Creative/Creative.html">Most Creative</a></li>
