XL homepage almst done

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <title>Traczyk</title>
 <link rel="shortcut icon" href="assets/images/favicon.ico">
 <link href="assets/simpleGridTemplate.css" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Nunito|Coming+Soon" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Sarabun|Thasadith" rel="stylesheet">
 </head>
 <body>
     
@@ -31,14 +30,13 @@
     </div>
   <!-- Hero Section -->
   <div class="intro">
-      <h3>Zack Traczyk</h3>
       <p>When posed with the question, "Who is Zack Traczyk?" --the words hardworking and willing to learn come quickly to mind. As an aved coder and persistant learner, I throw myself at daunting problems, always trying to understand how they work and what is the best solution.</p>
       <p>Here you can find a few of the projects I have done over the years. Some are complete while others are still works in progress.</p>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
     $(window).bind('scroll', function () {
-        if ($(window).scrollTop() > 350) {
+        if ($(window).scrollTop() > 235) {
             $('.menu').addClass('fixed');
         } else {
             $('.menu').removeClass('fixed');
