--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </div>
   <!-- Hero Section -->
   <div class="intro">
+      <img src="assets/images/LogoBig.jpg"/>
       <p>When posed with the question, "Who is Zack Traczyk?" --the words hardworking and willing to learn come quickly to mind. As an aved coder and persistant learner, I throw myself at daunting problems, always trying to understand how they work and what is the best solution.</p>
       <p>Here you can find a few of the projects I have done over the years. Some are complete while others are still works in progress.</p>
   </div>
