front page almost done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <title>Traczyk</title>
 <link rel="shortcut icon" href="assets/images/favicon.ico">
 <link href="assets/simpleGridTemplate.css" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Sarabun|Thasadith" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Sarabun|Thasadith|Noto+Sans" rel="stylesheet">
 </head>
 <body>
     
@@ -31,7 +31,7 @@
   <!-- Hero Section -->
   <div class="intro">
       <img src="assets/images/LogoBig.jpg"/>
-      <p>When posed with the question, "Who is Zack Traczyk?" --the words hardworking and willing to learn come quickly to mind. As an aved coder and persistant learner, I throw myself at daunting problems, always trying to understand how they work and what is the best solution.</p>
+      <p>Hello. I’m a coding enthusiast and design hobbyist. I’m currently a student at Oak Park River Forest High School where I enjoy playing soccer and attending Graphic Design Club. Here are some of my various projects I have accomplished over the years.</p>
       <p>Here you can find a few of the projects I have done over the years. Some are complete while others are still works in progress.</p>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
