--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- Hero Section -->
   <div class="intro">
       <img src="assets/images/LogoBig.jpg"/>
-      <p>Hello. I’m a coding enthusiast and design hobbyist. I’m currently a student at Oak Park River Forest High School where I enjoy playing soccer and attending Graphic Design Club. Here are some of my various projects I have accomplished over the years.</p>
+      <p>Hello. I’m a coding enthusiast and design hobbyist. I’m currently a student at Oak Park River Forest High School where I enjoy playing soccer and attending Graphic Design Club. I also enjoy making video games with RPG Maker, twine, and HTML5's canvas.</p>
       <p>Here you can find a few of the projects I have done over the years. Some are complete while others are still works in progress.</p>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
