--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="menu">
         <ul id="menu_container">
             <li class="menu_item"><a href="Most%20Creative/Creative.html">Most Creative</a></li>
-            <li class="menu_item"><a href="Best%20Cources/Best.html">Best Cources</a></li>
+            <li class="menu_item"><a href="Best%20Cources/Best.html">Best Courses</a></li>
             <li class="menu_item"><a href="https://github.com/xxzbuckxx">Github</a></li>
             <li class="menu_item"><a href="#">About</a></li>
         </ul>
