--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <h1 id="title">I'm Zack Traczyk.</h1>
     <div class="menu">
         <ul id="menu_container">
-            <li class="menu_item"><a href="#">Gallery</a></li>
-            <li class="menu_item"><a href="Most%20Creative/Creative.html">Most Creative</a></li>
+            <li class="menu_item"><a href="">Gallery</a></li>
+            <li class="menu_item"><a href="Creative.html">Most Creative</a></li>
             <li class="menu_item"><a href="Best%20Cources/Best.html">Best Courses</a></li>
             <li class="menu_item"><a href="https://github.com/xxzbuckxx">Github</a></li>
         </ul>
     </div>
   <!-- Hero Section -->
   <div class="intro">
-      <img src="assets/images/LogoBig.jpg"/>
+      <img id="icon" src="assets/images/LogoBig.jpg"/>
       <p>Hello. I’m a coding enthusiast and design hobbyist. I’m currently a student at Oak Park River Forest High School where I enjoy playing soccer and attending Graphic Design Club. I also enjoy making video games with RPG Maker, twine, and HTML5's canvas.</p>
       <p>Here you can find a few of the projects I have done over the years. Some are complete while others are still works in progress.</p>
   </div>
