--- a/Creative.html
+++ b/Creative.html
@@ -22,7 +22,7 @@
     <h1 id="title">Most Creative Project.</h1>
     <div class="menu">
         <ul id="menu_container">
-            <li class="menu_item"><a href="../index.html">Gallery</a></li>
+            <li class="menu_item"><a href="index.html">Gallery</a></li>
             <li class="menu_item"><a href="">Most Creative</a></li>
             <li class="menu_item"><a href="../Best%20Cources/Best.html">Best Courses</a></li>
             <li class="menu_item"><a href="https://github.com/xxzbuckxx">Github</a></li>
@@ -31,8 +31,7 @@
   <!-- Hero Section -->
   <div class="intro">
     <img id="start" src="assets/images/Capture.PNG">
-    <p id="desc">My most creative project was Blob Mob because of its use of music, digital art, and game design. I started development on blobmob on October 13, 2016 (the beginning of my freshman year). I origanlly started making the project in an online html editor. I was experimenting with animations and HTML5's canvas. However, as the project grew more complicated I had to start a git respitory and work on my home computer. My favorite part</p>
-    <p>My </p>
+    <p id="desc">My most creative project was Blob Mob because of its use of music, digital art, and game design. I started development on blobmob on October 13, 2016 (the beginning of my freshman year). I origanlly started making the project in an online html editor while I was experimenting with animations in HTML5's canvas tag. However, as the project grew more complicated I had to start a git respitory and work on my home computer.</p>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
