Temple Explorers added

--- a/index.html
+++ b/index.html
@@ -64,14 +64,20 @@
       <p class="text_column">Bone Factory is a text based game made with Twine. This was one of the first games I ever made.</p>
       <p class="text_footer"><a href="http://philome.la/TraczykZack/the-bone-factory">Play the game</a></p>
     </div>
+    <div class="thumbnail"> <a href="temple.html"><img src="assets/images/J&H.PNG" alt="" width="2000" class="cards"/></a>
+      <h4>Jeffery &amp; Hamlet - Temple Explorers</h4>
+      <p class="tag">Gamemaker 2</p>
+      <p class="text_column">A local Cooperative Game where 2 players must work together to collect diamonds.</p>
+      <p class="text_footer"><a href="temple.html">Play the game</a></p>
+    </div>
+   </div>
+   <div class="gallery">
     <div class="thumbnail"> <a href="Projects/Excel/Excel.html"><img src="assets/images/excel.PNG" alt="Excel Project" width="2000" class="cards"/></a>
       <h4>Excel Projects<i>May 2018</i></h4>
       <p class="tag">Microsoft Excel 2016</p>
       <p class="text_column">Here are a couple of examples showing my profficency in Microsoft Word.</p>
       <p class="text_footer"><a href="Projects/Excel/Excel.html">More information</a></p>
     </div>
-  </div>
-  <div class="gallery">
     <div class="thumbnail"> <a href="Projects/Word/Word.html"><img src="assets/images/word.PNG" alt="" width="2000" class="cards"/></a>
       <h4>Word Projects<i>Apr 2018</i></h4>
       <p class="tag">Microsoft Word 2016</p>
@@ -88,12 +94,6 @@
       <h4>CSS Grids<i>Feb 2018</i></h4>
       <p class="tag">HTML, CSS</p>
       <p class="text_column">Here is a test website organized using CSS Grids.</p>
-      <p class="text_footer"><a href="">More information</a></p>
-    </div>
-    <div class="thumbnail"> <a href="#"><img src="assets/images/bkg_06.jpg" alt="" width="2000" class="cards"/></a>
-      <h4>Nodejs projects</h4>
-      <p class="tag">HTML, CSS + Bootstrap, JS + Node + Socket.io</p>
-      <p class="text_column">Here are websites I made using Node.js and Real-time communication.</p>
       <p class="text_footer"><a href="">More information</a></p>
     </div>
   </div>
