--- a/temple.html
+++ b/temple.html
@@ -10,12 +10,12 @@
         <meta charset="utf-8"/>
 
         <!-- Set the title bar of the page -->
-        <title>Made in GameMaker Studio 2</title>
+        <title>Jeffery &amp; Hamlet - Temple Explorers</title>
 
         <!-- Set the background colour of the document -->
         <style>
             body {
-              background: black;
+              background: #000000;
               color:#cccccc;
               margin: 0px;
               padding: 0px;
@@ -30,7 +30,6 @@
                       border: 0px;
                       width: 940.5px;
                       display: block;
-                      
             }
             :-webkit-full-screen #canvas {
                  width: 100%;
@@ -82,7 +81,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/Jeffery & Hamlet - Temple Explorers.js?DUFBC=996625256"></script>
+        <script type="text/javascript" src="html5game/Temple Explorers v2.js?YTNYB=885076433"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
